Adding type parameters; reducing code and correct warnings