@@ -17,7 +17,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  *
- * The maintainer of this program can be reached at jsettlers@nand.net 
+ * The maintainer of this program can be reached at jsettlers@nand.net
  **/
 package soc.game;
 
@@ -29,6 +29,7 @@ import soc.util.SOCGameBoardReset;
 
 import java.io.Serializable;
 
+import java.util.Collection;
 import java.util.Date;
 import java.util.Enumeration;
 import java.util.HashSet;
@@ -85,7 +86,7 @@ public class SOCGame implements Serializable, Cloneable
      *      PLACING_ or WAITING_
      * </UL>
      *<P>
-     * The code reacts to (switches based on) game state in several places. 
+     * The code reacts to (switches based on) game state in several places.
      * The main places to check, if you add a game state:
      *<UL>
      * <LI> {@link soc.client.SOCBoardPanel#updateMode()}
@@ -444,7 +445,7 @@ public class SOCGame implements Serializable, Cloneable
      * Currently, if the game is reset, {@link #resetAsCopy()} copies ownerName,
      * even if they aren't still connected to the game.
      * NOT CURRENTLY SET AT CLIENT.
-     * @since 1.1.10 
+     * @since 1.1.10
      */
     private String ownerName;
 
@@ -555,7 +556,7 @@ public class SOCGame implements Serializable, Cloneable
      * the game options ({@link SOCGameOption}), or null
      * @since 1.1.07
      */
-    private Hashtable opts;
+    private Hashtable<String, SOCGameOption> opts;
 
     /**
      * the players; never contains a null element, use {@link #isSeatVacant(int)}
@@ -630,7 +631,7 @@ public class SOCGame implements Serializable, Cloneable
      * the robber is being moved because a knight card
      * has just been played.  Thus, if {@link #forceEndTurn()}
      * is called, the knight card should then be returned to
-     * the player's hand. 
+     * the player's hand.
      */
     private boolean placingRobberForKnightCard;
 
@@ -663,7 +664,7 @@ public class SOCGame implements Serializable, Cloneable
      * At that point, the Special Building Phase is over,
      * and it's the next player's turn as usual.
      * @see #askedSpecialBuildPhase
-     * @since 1.1.08 
+     * @since 1.1.08
      */
     private int specialBuildPhase_afterPlayerNumber;
 
@@ -686,7 +687,7 @@ public class SOCGame implements Serializable, Cloneable
     /**
      * used to restore the LR player
      */
-    Stack oldPlayerWithLongestRoad;
+    Stack<SOCOldLRStats> oldPlayerWithLongestRoad;
 
     /**
      * the player declared winner, if gamestate == OVER; otherwise -1
@@ -777,7 +778,7 @@ public class SOCGame implements Serializable, Cloneable
      * Null when not {@link #hasSeaBoard}.
      * @since 2.0.00
      */
-    private Vector placedShipsThisTurn;
+    private Vector<Integer> placedShipsThisTurn;
 
     /**
      * The number of normal turns (not rounds, not initial placements), including this turn.
@@ -826,7 +827,7 @@ public class SOCGame implements Serializable, Cloneable
      *             object class besides {@link SOCGameOption}
      * @since 1.1.07
      */
-    public SOCGame(String n, Hashtable op)
+    public SOCGame(String n, Hashtable<String, SOCGameOption> op)
         throws IllegalArgumentException
     {
         this(n, true, op);
@@ -866,7 +867,7 @@ public class SOCGame implements Serializable, Cloneable
      *             fails {@link SOCMessage#isSingleLineAndSafe(String)}.
      * @since 1.1.07
      */
-    public SOCGame(String n, boolean a, Hashtable op)
+    public SOCGame(String n, boolean a, Hashtable<String, SOCGameOption> op)
         throws IllegalArgumentException
     {
         // For places to initialize fields, see also resetAsCopy().
@@ -918,18 +919,18 @@ public class SOCGame implements Serializable, Cloneable
         forcingEndTurn = false;
         askedSpecialBuildPhase = false;
         placingRobberForKnightCard = false;
-        oldPlayerWithLongestRoad = new Stack();
+        oldPlayerWithLongestRoad = new Stack<SOCOldLRStats>();
         lastActionWasBankTrade = false;
         movedShipThisTurn = false;
         if (hasSeaBoard)
-            placedShipsThisTurn = new Vector();
+            placedShipsThisTurn = new Vector<Integer>();
 
         opts = op;
         if (op == null)
         {
             clientVersionMinRequired = -1;
         } else {
-            final StringBuffer optProblems = SOCGameOption.adjustOptionsToKnown(op, null, false); 
+            final StringBuffer optProblems = SOCGameOption.adjustOptionsToKnown(op, null, false);
             if (optProblems != null)
                 throw new IllegalArgumentException("op: unknown option(s): " + optProblems);
 
@@ -1217,7 +1218,7 @@ public class SOCGame implements Serializable, Cloneable
      * @see #isGameOptionSet(String)
      * @see #getGameOptionIntValue(String)
      */
-    public Hashtable getGameOptions()
+    public Hashtable<String, SOCGameOption> getGameOptions()
     {
         return opts;
     }
@@ -1234,8 +1235,7 @@ public class SOCGame implements Serializable, Cloneable
     {
         if (opts == null)
             return false;
-        else
-            return opts.containsKey(optKey);
+        return opts.containsKey(optKey);
     }
 
     /**
@@ -1269,16 +1269,16 @@ public class SOCGame implements Serializable, Cloneable
      * @see #getGameOptionIntValue(Hashtable, String)
      * @see #getGameOptionStringValue(Hashtable, String)
      */
-    public static boolean isGameOptionSet(Hashtable opts, final String optKey)
+    public static boolean isGameOptionSet(Hashtable<String, SOCGameOption> opts, final String optKey)
     {
         // OTYPE_* - if a new type is added, update this method's javadoc.
 
         if (opts == null)
             return false;
-        SOCGameOption op = (SOCGameOption) opts.get(optKey);
+        SOCGameOption op = opts.get(optKey);
         if (op == null)
             return false;
-        return op.getBoolValue();        
+        return op.getBoolValue();
     }
 
     /**
@@ -1322,7 +1322,7 @@ public class SOCGame implements Serializable, Cloneable
      * @see #isGameOptionSet(String)
      * @see #getGameOptionIntValue(Hashtable, String, int, boolean)
      */
-    public static int getGameOptionIntValue(Hashtable opts, final String optKey)
+    public static int getGameOptionIntValue(Hashtable<String, SOCGameOption> opts, final String optKey)
     {
         // OTYPE_* - if a new type is added, update this method's javadoc.
 
@@ -1350,13 +1350,13 @@ public class SOCGame implements Serializable, Cloneable
      * @see #isGameOptionSet(String)
      * @see #getGameOptionIntValue(Hashtable, String)
      */
-    public static int getGameOptionIntValue(Hashtable opts, final String optKey, final int defValue, final boolean onlyIfBoolSet)
+    public static int getGameOptionIntValue(Hashtable<String, SOCGameOption> opts, final String optKey, final int defValue, final boolean onlyIfBoolSet)
     {
         // OTYPE_* - if a new type is added, update this method's javadoc.
 
         if (opts == null)
             return defValue;
-        SOCGameOption op = (SOCGameOption) opts.get(optKey);
+        SOCGameOption op = opts.get(optKey);
         if (op == null)
             return defValue;
         if (onlyIfBoolSet && ! op.getBoolValue())
@@ -1394,13 +1394,13 @@ public class SOCGame implements Serializable, Cloneable
      * @see #isGameOptionDefined(String)
      * @see #isGameOptionSet(String)
      */
-    public static String getGameOptionStringValue(Hashtable opts, final String optKey)
+    public static String getGameOptionStringValue(Hashtable<String, SOCGameOption> opts, final String optKey)
     {
         // OTYPE_* - if a new type is added, update this method's javadoc.
 
         if (opts == null)
             return null;
-        SOCGameOption op = (SOCGameOption) opts.get(optKey);
+        SOCGameOption op = opts.get(optKey);
         if (op == null)
             return null;
         return op.getStringValue();
@@ -1634,13 +1634,8 @@ public class SOCGame implements Serializable, Cloneable
     public SOCPlayer getPlayerWithLargestArmy()
     {
         if (playerWithLargestArmy != -1)
-        {
             return players[playerWithLargestArmy];
-        }
-        else
-        {
-            return null;
-        }
+        return null;
     }
 
     /**
@@ -1666,13 +1661,8 @@ public class SOCGame implements Serializable, Cloneable
     public SOCPlayer getPlayerWithLongestRoad()
     {
         if (playerWithLongestRoad != -1)
-        {
             return players[playerWithLongestRoad];
-        }
-        else
-        {
-            return null;
-        }
+        return null;
     }
 
     /**
@@ -1701,13 +1691,8 @@ public class SOCGame implements Serializable, Cloneable
     public SOCPlayer getPlayerWithWin()
     {
         if (playerWithWin != -1)
-        {
             return players[playerWithWin];
-        }
-        else
-        {
-            return null;
-        }
+        return null;
     }
 
     /**
@@ -1721,7 +1706,7 @@ public class SOCGame implements Serializable, Cloneable
      * {@link #startGame()} or after {@link SOCBoardLarge#setLandHexLayout(int[])}.
      *<P>
      * For the v1 and v2 board encodings, the land hex coordinates never change, so
-     * {@link SOCPlayerNumbers} knows them already. 
+     * {@link SOCPlayerNumbers} knows them already.
      *
      * @since 2.0.00
      * @throws IllegalStateException if the board has the v1 or v2 encoding
@@ -1962,7 +1947,7 @@ public class SOCGame implements Serializable, Cloneable
      * Does not check game state, resources, or pieces remaining.
      * @param pl  Player
      * @param shipEdge  Edge to place a ship
-     * @return true if this player's ship could be placed there 
+     * @return true if this player's ship could be placed there
      * @since 2.0.00
      * @see #canMoveShip(int, int, int)
      */
@@ -2160,12 +2145,10 @@ public class SOCGame implements Serializable, Cloneable
                     /**
                      * look for other player's roads adjacent to this node
                      */
-                    Enumeration allRoadsEnum = board.getRoads().elements();
+                    Collection<SOCRoad> allRoadsEnum = board.getRoads();
 
-                    while (allRoadsEnum.hasMoreElements())
+                    for (SOCRoad road : allRoadsEnum)
                     {
-                        SOCRoad road = (SOCRoad) allRoadsEnum.nextElement();
-
                         if (adjEdge == road.getCoordinates())
                         {
                             roads[road.getPlayerNumber()]++;
@@ -2209,7 +2192,7 @@ public class SOCGame implements Serializable, Cloneable
          */
         if (pp.getType() == SOCPlayingPiece.SHIP)
         {
-            placedShipsThisTurn.add(new Integer(pp.getCoordinates()));
+            placedShipsThisTurn.add(Integer.valueOf(pp.getCoordinates()));
         }
 
         /**
@@ -2233,7 +2216,7 @@ public class SOCGame implements Serializable, Cloneable
      *<P>
      * Also used in {@link #forceEndTurn()} to continue the game
      * after a cancelled piece placement in {@link #START1A}..{@link #START2B} .
-     * If the current player number changes here, {@link #isForcingEndTurn()} is cleared. 
+     * If the current player number changes here, {@link #isForcingEndTurn()} is cleared.
      *<P>
      * In {@link #START2B}, calls {@link #updateAtTurn()} after last initial road placement.
      *
@@ -2344,7 +2327,7 @@ public class SOCGame implements Serializable, Cloneable
             {
                 gameState = PLAY1;
             }
-            else 
+            else
             {
                 gameState = SPECIAL_BUILDING;
             }
@@ -2526,7 +2509,7 @@ public class SOCGame implements Serializable, Cloneable
         board.removePiece(pp);
 
         //
-        // call undoPutPiece() on every player so that 
+        // call undoPutPiece() on every player so that
         // they can update their potentials
         //
         for (int i = 0; i < maxPlayers; i++)
@@ -2564,7 +2547,7 @@ public class SOCGame implements Serializable, Cloneable
         //
         // update which player has longest road
         //
-        SOCOldLRStats oldLRStats = (SOCOldLRStats) oldPlayerWithLongestRoad.pop();
+        SOCOldLRStats oldLRStats = oldPlayerWithLongestRoad.pop();
         oldLRStats.restoreOldStats(this);
     }
 
@@ -2612,7 +2595,7 @@ public class SOCGame implements Serializable, Cloneable
              *
              * Only necessary when hasSeaBoard (v3 board encoding):
              * In the v1 and v2 board encodings, the legal coordinates never change, so
-             * SOCPlayer knows them already. 
+             * SOCPlayer knows them already.
              */
             setPlayersLandHexCoordinates();
             HashSet psList = ((SOCBoardLarge) board).getLegalAndPotentialSettlements();
@@ -2636,7 +2619,7 @@ public class SOCGame implements Serializable, Cloneable
         {
             // Some knights become other card types
             for (i = 0; i < 4; i++)
-                devCardDeck[i] = SOCDevCardConstants.SWAP; 
+                devCardDeck[i] = SOCDevCardConstants.SWAP;
             for (i = 4; i < 8; i++)
                 devCardDeck[i] = SOCDevCardConstants.DESTROY;
             for (i = 8; i < 14; i++)
@@ -2737,7 +2720,7 @@ public class SOCGame implements Serializable, Cloneable
             }
             if (lastPlayerNumber == firstPlayerNumber)
             {
-                // Should not happen: All seats blank                    
+                // Should not happen: All seats blank
                 D.ebugPrintln("** setFirstPlayer: Should not happen: All seats blank");
                 lastPlayerNumber = -1;
                 break;
@@ -2832,7 +2815,7 @@ public class SOCGame implements Serializable, Cloneable
      *<P>
      * May be called during initial placement.
      * (Game methods don't call during this time, but the server sends each client
-     *  a message to call <tt>updateAtTurn</tt> whenever the current player changes.) 
+     *  a message to call <tt>updateAtTurn</tt> whenever the current player changes.)
      * Is called at the end of initial placement, before the first player's first roll.
      * On the 6-player board, is called at the start of
      * each player's {@link #SPECIAL_BUILDING Special Building Phase}.
@@ -2910,7 +2893,7 @@ public class SOCGame implements Serializable, Cloneable
      * Does not clear any player's {@link SOCPlayer#hasAskedSpecialBuild()} flag;
      * do that at the server, and report it out to other players.
      *<P>
-     * After calling forceEndTurn, usually the gameState will be {@link #PLAY1},  
+     * After calling forceEndTurn, usually the gameState will be {@link #PLAY1},
      * and the caller should call {@link #endTurn()}.  The {@link #isForcingEndTurn()}
      * flag is also set.  The return value in this case is
      * {@link SOCForceEndTurnResult#FORCE_ENDTURN_NONE FORCE_ENDTURN_NONE}.
@@ -3119,7 +3102,7 @@ public class SOCGame implements Serializable, Cloneable
             // turn, and give another player a chance.
             if (advTurnForward)
             {
-                // Was first placement; allow other players to begin second placement. 
+                // Was first placement; allow other players to begin second placement.
                 // This player won't get a second placement either.
                 gameState = START2A;
                 advanceTurnBackwards();
@@ -3166,7 +3149,7 @@ public class SOCGame implements Serializable, Cloneable
     {
         // select random cards, and discard or gain
         SOCResourceSet picks = new SOCResourceSet();
-        SOCResourceSet hand = players[pn].getResources(); 
+        SOCResourceSet hand = players[pn].getResources();
         if (isDiscard)
         {
             discardOrGainPickRandom(hand, hand.getTotal() / 2, true, picks, rand);
@@ -3212,7 +3195,7 @@ public class SOCGame implements Serializable, Cloneable
     {
         // resources, to be shuffled and chosen from;
         // discards from fromHand, or possible new picks.
-        Vector tempHand = new Vector(16);
+        Vector<Integer> tempHand = new Vector<Integer>(16);
 
         if (isDiscard)
         {
@@ -3229,7 +3212,7 @@ public class SOCGame implements Serializable, Cloneable
                 for (int i = fromHand.getAmount(rsrcType);
                         i != 0; i--)
                 {
-                    tempHand.addElement(new Integer(rsrcType));    
+                    tempHand.addElement(Integer.valueOf(rsrcType));
                     // System.err.println("rsrcType="+rsrcType);
                 }
             }
@@ -3248,7 +3231,7 @@ public class SOCGame implements Serializable, Cloneable
             // Next, add resources with that amount, and then increase
             // lowestNum until we've found at least numDiscards resources.
             int toAdd = numToPick;
-            Vector alreadyPicked = new Vector();
+            Vector<Integer> alreadyPicked = new Vector<Integer>();
             do
             {
                 for (int rsrcType = SOCResourceConstants.CLAY;
@@ -3264,7 +3247,7 @@ public class SOCGame implements Serializable, Cloneable
                     {
                         // Already added in previous iterations.
                         // Add more of this type only if we need more.
-                        alreadyPicked.addElement(new Integer(rsrcType));
+                        alreadyPicked.addElement(Integer.valueOf(rsrcType));
                     }
                 }
 
@@ -3292,7 +3275,7 @@ public class SOCGame implements Serializable, Cloneable
             int idx = Math.abs(rand.nextInt() % tempHand.size());
 
             // System.err.println("idx="+idx);
-            picks.add(1, ((Integer) tempHand.elementAt(idx)).intValue());
+            picks.add(1, tempHand.elementAt(idx).intValue());
             tempHand.removeElementAt(idx);
         }
     }
@@ -3425,7 +3408,7 @@ public class SOCGame implements Serializable, Cloneable
             {
                 if (! isSeatVacant(i))
                 {
-                    SOCPlayer pl = players[i]; 
+                    SOCPlayer pl = players[i];
                     pl.addRolledResources(getResourcesGainedFromRoll(pl, currentDice));
                     if (hasSeaBoard && pl.getNeedToPickGoldHexResources() > 0)
                         anyGoldHex = true;
@@ -3463,14 +3446,12 @@ public class SOCGame implements Serializable, Cloneable
         /**
          * check the hexes touching settlements
          */
-        getResourcesGainedFromRollPieces
-            (roll, resources, robberHex, player.getSettlements().elements(), 1);
+        getResourcesGainedFromRollPieces(roll, resources, robberHex, player.getSettlements(), 1);
 
         /**
          * check the hexes touching cities
          */
-        getResourcesGainedFromRollPieces
-            (roll, resources, robberHex, player.getCities().elements(), 2);
+        getResourcesGainedFromRollPieces(roll, resources, robberHex, player.getCities(), 2);
 
         return resources;
     }
@@ -3492,12 +3473,14 @@ public class SOCGame implements Serializable, Cloneable
      * @param incr   Add this many resources (1 or 2) per playing piece
      * @since 2.0.00
      */
-    private final void getResourcesGainedFromRollPieces
-        (final int roll, SOCResourceSet resources, final int robberHex, Enumeration sEnum, final int incr)
+    private final void getResourcesGainedFromRollPieces(int roll,
+                                                        SOCResourceSet resources,
+                                                        int robberHex,
+                                                        Collection<? extends SOCPlayingPiece> sEnum,
+                                                        int incr)
     {
-        while (sEnum.hasMoreElements())
+        for (SOCPlayingPiece sc : sEnum)
         {
-            SOCPlayingPiece sc = (SOCPlayingPiece) sEnum.nextElement();
             Enumeration hexes = board.getAdjacentHexesToNode(sc.getCoordinates()).elements();
 
             while (hexes.hasMoreElements())
@@ -3663,7 +3646,7 @@ public class SOCGame implements Serializable, Cloneable
      *<P>
      * Called at server only; clients will instead get <tt>SOCPlayerElement</tt> messages
      * for the resources picked and the "need to pick" flag, and will call
-     * {@link SOCPlayer#getResources()}<tt>.add</tt> and {@link SOCPlayer#setNeedToPickGoldHexResources(int)}. 
+     * {@link SOCPlayer#getResources()}<tt>.add</tt> and {@link SOCPlayer#setNeedToPickGoldHexResources(int)}.
      *
      * @param pn   the number of the player
      * @param rs   the resources that are being picked
@@ -4087,7 +4070,7 @@ public class SOCGame implements Serializable, Cloneable
         while (plEnum.hasMoreElements())
         {
             SOCPlayer pl = (SOCPlayer) plEnum.nextElement();
-            int pn = pl.getPlayerNumber(); 
+            int pn = pl.getPlayerNumber();
 
             if ((pn != currentPlayerNumber) && (! isSeatVacant(pn)) && (pl.getResources().getTotal() > 0))
             {
@@ -5208,7 +5191,7 @@ public class SOCGame implements Serializable, Cloneable
      * @param reqPN Player number requesting the vote
      * @throws IllegalArgumentException If this player number has already
      *     requested a reset this turn
-     * @throws IllegalStateException If there is already a vote in progress 
+     * @throws IllegalStateException If there is already a vote in progress
      *
      * @see #getResetVoteRequester()
      * @see #resetVoteRegister(int, boolean)
@@ -5380,7 +5363,7 @@ public class SOCGame implements Serializable, Cloneable
                     break;
                 }
         }
-        return vyes;  
+        return vyes;
     }
 
     // ---------------------------------------
@@ -5390,7 +5373,7 @@ public class SOCGame implements Serializable, Cloneable
     /**
      * Can the player either buy and place a piece (or development card) now,
      * or can they ask now for the Special Building Phase (in a 6-player game)?
-     * Based on game state and current player number, not on resources available. 
+     * Based on game state and current player number, not on resources available.
      *<P>
      * In 1.1.09 and later, player is allowed to Special Build at start of their
      * own turn, only if they haven't yet rolled or played a dev card.
